--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
 	"description": "",
 	"main": "InfoSec project for freeCodeCamp",
 	"scripts": {
-		"start": "node server.js"
+		"start": "nodemon server.js"
 	},
 	"dependencies": {
+		"axios": "^0.21.1",
 		"body-parser": "^1.15.2",
 		"chai": "^4.2.0",
 		"chai-http": "^4.3.0",
@@ -14,7 +15,9 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
-		"mocha": "^3.2.0"
+		"mocha": "^3.2.0",
+		"mongoose": "^5.12.0",
+		"nodemon": "^2.0.7"
 	},
 	"repository": {
 		"type": "git",
